Fix env and docker compose

--- a/django_gift/.env.example
+++ b/django_gift/.env.example
@@ -2,6 +2,6 @@ DEBUG=on
 ALLOWED_HOSTS=localhost,1272-178-66-156-147.ngrok.io,127.0.0.1
 INTERNAL_IPS=localhost
 
-SECRET_KEY='wk0h*y=4y@8y!(1)uuuo(m6om!)ew*)ysjm*+!twwxq2adu)t-'
+SECRET_KEY=wk0h*y=4y@8y!(1)uuuo(m6om!)ew*)ysjm*+!twwxq2adu)t-
 
-DATABASE_URL='postgresql://user:password123@main_db:5432/postgres'
+DATABASE_URL=postgresql://user:password123@main_db:5432/postgres
