--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     env_file:
       - .env.db
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "user", "-d", "postgres"]
+      test: ["CMD", "pg_isready", "-U", "gift_user", "-d", "postgres"]
       interval: 5s
       retries: 5
     restart: always
