Fix path to media and docker volumes

--- a/django_gift/.env.example
+++ b/django_gift/.env.example
@@ -4,4 +4,4 @@ INTERNAL_IPS=localhost
 
 SECRET_KEY=wk0h*y=4y@8y!(1)uuuo(m6om!)ew*)ysjm*+!twwxq2adu)t-
 
-DATABASE_URL=postgresql://user:password123@main_db:5432/postgres
+DATABASE_URL=postgresql://gift_user:password123@main_db:5432/postgres
