--- a/django_gift/Dockerfile
+++ b/django_gift/Dockerfile
@@ -2,11 +2,13 @@ FROM python:3.10
 
 ENV PYTHONUNBUFFERED=1
 
+COPY django_gift/scripts scripts
+
+RUN ["chmod", "+x", "scripts/web/startup.sh"]
+
 WORKDIR /code
 
 COPY django_gift .
 
-RUN ["chmod", "+x", "scripts/web/startup.sh"]
-
 RUN pip install --no-cache-dir --upgrade pip \
-    && pip install --no-cache-dir -r requirements.txt
+    && pip install --no-cache-dir -r requirements.txt \
