--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,5 @@ length_sort_straight = true
 include_trailing_comma = true
 use_parentheses = true
 multi_line_output = 3
-known_local_folder = ['action', 'conf', 'crud', 'handlers', 'models', 'state', 'template', 'customer', 'django_gift']
+known_local_folder = ['action', 'conf', 'crud', 'handlers', 'models',
+                      'state', 'template', 'customer', 'django_gift', 'parser']
