Bot token and reset file_id on save

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -1,2 +1,3 @@
 # URL для асинхронного подключения к БД
 ASYNC_DATABASE_URL=postgresql+asyncpg://gift_user:password123@main_db:5432/postgres
+BOT_TOKEN=your-token
